--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-MY NEW WEBSITE!!!
-UNDER CONSTRUCTION
+<!doctype html>
+<html>
+<head></head>
+<body>
+<h1>Michael X Hugue</h1>
 Portfolio
+</body>
+</html>
+
