--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
-<head></head>
+<head>
+  
+ <style>
+  body{  
+    background-color:black
+    color: white
+    font-family: san serif; 
+  }
+  </style>
+  
+    
+</head>
 <body>
 <h1>Michael X Hugue</h1>
 Portfolio
