--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   
  <style>
   body{  
-    background-color:black
-    color: white
-    font-family: san serif; 
+    background-color:black;
+    color: white;
+    font-family: sans-serif; 
   }
   </style>
   
