--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
  <style>
   body{  
-    background-color:black;
+    background-color:#3BB2FF;
     color: white;
     font-family: sans-serif; 
   }
