--- a/about.html
+++ b/about.html
@@ -6,5 +6,7 @@
 <body>
 
 <h1>About me</h1> 
+<p>I am a Graphic Designer and a Artist based out of Miami.</p>
+<div>I enjoy travling and viewing the world</div>
 </body>
 </html>
