--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html>
 <head>
   <title> Michael Hugue </title>
+  <style>
+  h1{
+   font size:72px;
+   font-family:Georgia;
+   margin-top:50px;
+   
+    
+}
+  
+</style>
 </head>
 <body>
 
