--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
   <title> Michael Hugue </title>
   <style>
+  
+  
+  
   h1{
    font size:72px;
    font-family:Georgia;
@@ -16,6 +19,7 @@
 <body>
 
 <h1>About me</h1> 
+<img src=""http://upload.wikimedia.org/wikipedia/commons/3/3f/Bentley_Continental_GT_%28II%29_%E2%80%93_Frontansicht_%283%29,_30._August_2011,_D%C3%BCsseldorf.jpg""
 <p>I am a Graphic Designer and a Artist based out of Miami.</p>
 <div>I enjoy travling and viewing the world</div>
 </body>
