--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 
 <h1>About me</h1> 
-<img src="http://upload.wikimedia.org/wikipedia/commons/3/3f/Bentley_Continental_GT_%28II%29_%E2%80%93_Frontansicht_%283%29,_30._August_2011,_D%C3%BCsseldorf.jpg"
+<img src="http://fineartamerica.com/images/artistlogos/michael-hugue-1390336252-logo1.jpg"width="100">
 <p>I am a Graphic Designer and a Artist based out of Miami.</p>
 <div>I enjoy travling and viewing the world</div>
 </body>
