--- a/about.html
+++ b/about.html
@@ -23,8 +23,7 @@
 <p>I am a Graphic Designer and a Artist based out of Miami.</p>
 <div>I enjoy travling and viewing the world</div>
 <a target="_blank" href="http://instagram.com/morethan_art">
-<img src=https://cdn0.iconfinder.com/data/icons/social-glyph/30/instagram-30.png
-<img src=https://cdn0.iconfinder.com/data/icons/social-glyph/30/facebook-30.png
+<img src=https://cdn0.iconfinder.com/data/icons/social-glyph/30/instagram-30.png<img src=https://cdn0.iconfinder.com/data/icons/social-glyph/30/facebook-30.png
 
 </body>
 </html>
