--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <a target="_blank" href="http://instagram.com/morethan_art">
 <img src="https://cdn0.iconfinder.com/data/icons/social-glyph/30/instagram-30.png">
 </a>
-<a target="_blank" href="http://https://www.facebook.com/public/Michael-Hugue">
+<a target="_blank" href="https://www.facebook.com/mike.hugue">
 <img src="https://cdn0.iconfinder.com/data/icons/social-glyph/30/facebook-30.png">
 </a>
 
