--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
-<!doctype html>
 <html>
 <head>
-  <link href=<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-  <link href="style.css" rel="stylesheet">
- <style>
-  body{  
-    background-color: #3BB2FF;
-    color: white;
-    font-family: sans-serif; 
-  }
-  </style>
-  
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<link href="style.css" rel="stylesheet"> 
 </head>
 <body>
-<h1>Michael X Hugue</h1>
-Portfolio
+
+<nav>
+<a href="index.html"> Home </a>  <a href="about.html"> About </a>
+</nav>
+<header>
+<img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
+<h1>Rima Gerhard</h1>
+<h2>Portfolio</h2>
+</header>
+<section>
+  <button>See my work.</button>
+</section>
 </body>
 </html>
 
