--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
+<!doctype html>
 <html>
 <head>
-<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<title> About Rima </title>
 <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
 
 <nav>
-<a href="index.html"> Home </a>  <a href="about.html"> About </a>
+<a href="index.html"> Home </a> <a href="about.html"> About </a>
 </nav>
-<header>
-<img src="https://farm9.staticflickr.com/8650/15762352813_d5ec75a05f_n.jpg">
-<h1>Rima Gerhard</h1>
-<h2>Portfolio</h2>
-</header>
-<section>
-  <button>See my work.</button>
-</section>
+
+<h1>About Rima</h1>
+<p>I am a Web Developer based in Miami.</p>
+<div> I enjoy riding my bike and traveling. </div>
+
+<a href="http://www.twitter.com/rima_gerhard">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
+</a>
+<a href="http://www.linkedin.com/in/rimagerhard">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png">
+</a>
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
+
 </body>
 </html>
-
