--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a href="index.html"> Home </a> <a href="about.html"> About </a>
 </nav>
 
-<h1>About Michael-Xavier-Hugue</h1>
+<h1>About Michael Xavier Hugue</h1>
 <p>I am a Web Developer based in Miami.</p>
 <div> I enjoy riding my bike and traveling. </div>
 
