--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </nav>
 
 <h1>About Michael Xavier Hugue</h1>
-<p>I am a Web Developer based in Miami.</p>
-<div> I enjoy riding my bike and traveling. </div>
+<p>I am a Graphic Desiger based in Miami.</p>
+<div> I enjoy riding my bike and traveling, networking doing artshows painting and helping others. </div>
 
 <a href="http://www.twitter.com/rima_gerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
