--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
-<!doctype html>
+<!Doctype html>
 <html>
 <head>
 <title> Michael Xavier Hugue </title>
 <link href="style.css" rel="stylesheet"> 
 </head>
+
 <body>
 
 <nav>
 <a href="index.html"> Home </a> <a href="about.html"> About </a>
 </nav>
 
-<h1>About Michael Xavier Hugue</h1>
-<p>I am a Graphic Desiger based in Miami.</p>
-<div> I enjoy riding my bike and traveling, networking doing artshows painting and helping others. </div>
+
+
+
+<body>
+  
+  <h1>About Me</h1>
+  
+  <p> My name is Michael Xavier Hugue. I have been creating artwork and using my talent since the third grade. <br />
+   As an Artist, I love to display those life messages and lessons through my artwork. <br /> 
+My entire collection I gave the name “My Story” because it was life changing experiences that influenced me to create my artwork.<br />
+I’ve enrolled at Miami International University of Art & Design, to pursue a Bachelor Degree in Graphic Design. <br /> 
+I enjoy riding my bike and traveling, networking doing artshows painting and helping others. <br />
+  </p>
+</body>
+
 
 <a href="http://www.twitter.com/rima_gerhard">
 <img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
