--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
-<!Doctype html>
+<!doctype html>
 <html>
 <head>
 <title> Michael Xavier Hugue </title>
-<link href="style.css" rel="stylesheet"> 
 </head>
+
+<base href="style.css"
+<link href="#" id="colour-scheme" rel="stylesheet"> 
+
+<nav> 
+<a href="index.html"> Home </a>
+
+<a href="about.html"> About </a> 
+</nav> 
+
+
+<body>
+  
+  <h1>About Me</h1>
+  
+  <p> My name is Michael Xavier Hugue. I have been creating artwork and using my talent since the third grade. <br />
+   As an Artist, I love to display those life messages and lessons through my artwork. <br /> 
+My entire collection I gave the name “My Story” because it was life changing experiences that influenced me to create my artwork.<br />
+I’ve enrolled at Miami International University of Art & Design, to pursue a Bachelor Degree in Graphic Design. <br /> 
+     <br />
+  </p>
+</body>
+
+
+<style>
+a:link    {color:#000000; background-color:transparent; text-decoration:none}
+a:visited {color:#000000; background-color:transparent; text-decoration:none}
+a:hover   {color:#ff0000; background-color:transparent; text-decoration:underline}
+a:active  {color:#ff0000; background-color:transparent; text-decoration:underline}
+</style> 
 
 <body>
 
-<nav>
-<a href="index.html"> Home </a> <a href="about.html"> About </a>
-</nav>
-
-
-
-
-
-
 <a href="http://www.twitter.com/rima_gerhard">
-<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/43-twitter-32.png" alt="HTML tutorial"
+style="width:42px;height:42px;border:0">
 </a>
+
 <a href="http://www.linkedin.com/in/rimagerhard">
-<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png">
+<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/11-linkedin-32.png" alt="HTML tutorial"
+style="width:42px;height:42px;border:0">
 </a>
-<img src="https://cdn3.iconfinder.com/data/icons/picons-social/57/78-instagram-32.png">
+
 
 </body>
-</html>
