--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   
   <h1>About Me</h1>
   
-  <p> My name is Michael Xavier Hugue. I have been creating artwork and using my talent since the third grade. <br />
+  <p> My name is Michael Xavier Hugue. <br />
+  I have been creating artwork and using my talent since the third grade. <br />
    As an Artist, I love to display those life messages and lessons through my artwork. <br /> 
 My entire collection I gave the name “My Story” because it was life changing experiences that influenced me to create my artwork.<br />
 I’ve enrolled at Miami International University of Art & Design, to pursue a Bachelor Degree in Graphic Design. <br /> 
