--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ a:visited {color:#000000; background-color:transparent; text-decoration:none}
 a:hover   {color:#ff0000; background-color:transparent; text-decoration:underline}
 a:active  {color:#ff0000; background-color:transparent; text-decoration:underline}
 </style> 
-
+<section>
+<iframe src="http://josigraham.github.io/website/index.html"></iframe>
+</section>
 <body>
 
 <a href="http://www.twitter.com/rima_gerhard">
